fix up { :a => ActiveRecord::Base.new } (obviously normally it would be Cat.new or something)

--- a/README.rdoc
+++ b/README.rdoc
@@ -25,7 +25,14 @@
         end
       end
     end
-
+    
+    if defined?(ActiveRecord::Base)
+      class ActiveRecord::Base
+        def to_json(*args)
+          super nil
+        end
+      end
+    end
 
 == Copyright
 
